# emtracker_package

./: CMakeLists.txt  README.md  package.xml
launch/: launch.py
lib_emtracker/: CMakeLists.txt
lib_emtracker/config/: Beekley_Bottom.csv  Beekley_Feet.csv  Beekley_TOP.csv  Beekley_Under.csv  CSTARBot_bend_tip_610029.csv  CSTARBot_ref_8700468.csv  ICEBot_bend_tip_610029.csv  ICEBot_ref_610029.csv  Landmarks_Truth_AbdominalPhantom.csv  Landmarks_Truth_AbdominalPhantom_old.csv  Landmarks_Truth_HandheldCTR.csv  PhantomReference2CT.csv  config.yaml  landmarks_truth_ICEbot_bend_tip.csv  landmarks_truth_catheter_base.csv  landmarks_truth_catheter_bend_tip.csv  landmarks_truth_catheter_tip.csv  measured_landmarks.csv
lib_emtracker/include/: Butterworth.hpp  EMTracker.hpp  RigidTransformation.hpp
lib_emtracker/ndi_api/: CMakeLists.txt
lib_emtracker/ndi_api/src/: CombinedApi.cpp
lib_emtracker/src/: EMTracker.cpp  RigidTransformation.cpp
src/: EMtracker_node.cpp
